--- a/package.json
+++ b/package.json
@@ -1,22 +1,22 @@
 {
   "name": "@sensethenlove/svelte-turnstile",
-  "version": "1.0.9",
+  "version": "1.1.1",
   "author": "Sense Then Love",
   "license": "MIT",
   "type": "module",
   "svelte": "./dist/index.js",
   "types": "./dist/index.d.ts",
-  "homepage": "https://github.com/sensethenlove/loop-backwards#readme",
-  "description": "Helper functions & component to integrate svelte w/ an invisible cloudflare turnstile form validator",
+  "homepage": "https://github.com/sensethenlove/svelte-turnstile#readme",
+  "description": "Helper functions & component to integrate Svelte w/ an invisible Cloudflare Turnstile form validator",
   "files": [
     "dist"
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/sensethenlove/loop-backwards.git"
+    "url": "git+https://github.com/sensethenlove/svelte-turnstile.git"
   },
   "bugs": {
-    "url": "https://github.com/sensethenlove/loop-backwards/issues"
+    "url": "https://github.com/sensethenlove/svelte-turnstile/issues"
   },
   "exports": {
     ".": {
